--- a/package.json
+++ b/package.json
@@ -3,16 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "history": "^4.9.0",
-    "lodash": "^4.17.11",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
     "react-redux": "7.1.1",
-    "react-router": "5.1.2",
-    "react-router-dom": "5.1.2",
-    "react-router-redux": "^4.0.8",
-    "redux": "^4.0.4",
-    "redux-persist": "^5.10.0"
+    "redux": "^4.0.4"
   },
   "devDependencies": {
     "@babel/core": "7.1.6",
@@ -57,15 +51,11 @@
     "fork-ts-checker-webpack-plugin-alt": "0.4.14",
     "fs-extra": "7.0.0",
     "html-webpack-plugin": "^4.0.0-beta.2",
-    "husky": "^0.14.3",
     "identity-obj-proxy": "3.0.0",
     "jest": "24.7.1",
     "jest-pnp-resolver": "1.2.1",
     "jest-resolve": "24.7.1",
-    "lint-staged": "^4.3.0",
     "mini-css-extract-plugin": "0.7.0",
-    "node-sass": "^4.12.0",
-    "node-sass-chokidar": "^1.3.4",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.1.0",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -85,34 +75,12 @@
     "style-loader": "0.23.0",
     "terser-webpack-plugin": "1.1.0",
     "url-loader": "2.0.0",
-    "vconsole-webpack-plugin": "^1.1.2",
     "webpack": "4.36.1",
     "webpack-dev-server": "3.7.2",
-    "webpack-manifest-plugin": "2.0.4",
-    "workbox-webpack-plugin": "4.3.1"
-  },
-  "lint-staged": {
-    "src/app/**/*.{js,jsx,css,scss,json}": [
-      "prettier --config .prettierrc --write",
-      "git add"
-    ]
+    "webpack-manifest-plugin": "2.0.4"
   },
   "scripts": {
-    "dev": "node scripts/start.js",
-    "start": "node scripts/start.js",
-    "server": "node server/index.js",
-    "prettier": "prettier --single-quote --no-semi --print-width 80 --write 'src/app/**/*.{js,jsx,css,scss,json}'",
-    "precommit": "lint-staged",
-    "analyze": "source-map-explorer build/static/js/*",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom  --setupTestFrameworkScriptFile=raf/polyfill --config=jest.config.json",
-    "coverage": "yarn test --coverage",
-    "commit": "git-cz"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
+    "start": "node scripts/start.js"
   },
   "browserslist": [
     ">0.2%",
