--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,7 @@
   },
   "extends": "react-app",
   "globals": {
-    "React": true,
+    "React": true
   },
   "plugins": ["jsx-a11y", "prettier", "react"],
   "rules": {
